# rakun

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  deny.toml
test-project-compiler/: Cargo.toml  build.rs
test-project-compiler/src/: generated_tests.rs  lib.rs
test-project-compiler/src/snapshots/: test_package_compiler__generated_tests__duplicate_module.snap  test_package_compiler__generated_tests__erlang_app_generation.snap  test_package_compiler__generated_tests__erlang_empty.snap  test_package_compiler__generated_tests__erlang_escape_names.snap  test_package_compiler__generated_tests__erlang_import.snap  test_package_compiler__generated_tests__erlang_import_shadowing_prelude.snap  test_package_compiler__generated_tests__erlang_nested.snap  test_package_compiler__generated_tests__erlang_nested_qualified_constant.snap  test_package_compiler__generated_tests__import_cycle.snap  test_package_compiler__generated_tests__import_shadowed_name_warning.snap  test_package_compiler__generated_tests__imported_constants.snap  test_package_compiler__generated_tests__imported_external_fns.snap  test_package_compiler__generated_tests__imported_record_constructors.snap  test_package_compiler__generated_tests__javascript_d_ts.snap  test_package_compiler__generated_tests__javascript_import.snap  test_package_compiler__generated_tests__opaque_type_accessor.snap  test_package_compiler__generated_tests__opaque_type_construct.snap  test_package_compiler__generated_tests__opaque_type_destructure.snap  test_package_compiler__generated_tests__src_importing_test.snap  (+9 more)
(+2243 files in other folders)
